Fix alignment.

--- a/app/stylesheets/root/screen.sass
+++ b/app/stylesheets/root/screen.sass
@@ -270,7 +270,7 @@ hr
 
 #video
   position: absolute
-  margin: 165px 0px 0px 18px
+  margin: 165px 0px 0px 12px
   
   #screenie
     width: 937px
@@ -283,7 +283,7 @@ hr
     font-weight: normal
     color: #aa3015
     position: absolute
-    margin: -174px 0px 0px 314px
+    margin: -174px 0px 0px 355px
 
   a:hover
     color: #13181f
@@ -292,7 +292,7 @@ hr
 
 #page
   position: absolute
-  margin: 450px 0px 0px 0px
+  margin: 450px 0px 0px -6px
   width: 920px
   padding: 20px 20px 25px
   border: 6px solid #d9e7ee
@@ -334,9 +334,10 @@ hr
 #divider
   color: #ae4b0f
   font-family: Georgia
-  padding: 8px 18px 15px
+  padding: 8px 37px 15px
   margin: 0px auto
   font-size: 19px
+  margin-top: 10px
 
   .buttons a
     font-family: Georgia
@@ -350,8 +351,8 @@ hr
     float: left
     color: #ae4b0f
     font-family: Georgia
-    font-size: 16px
-    padding: 8px 18px
+    font-size: 15px
+    padding: 9px 22px
     background: #fcefce
     border-top: 1px solid #fabd1a
     border-bottom: 1px solid #fabd1a
@@ -376,9 +377,10 @@ hr
 
   .left
     margin-right: 10px
+    margin-left: 7px
 
   .right
-    margin-left: 10px
+    margin-left: 13px
 
 
 #quotes
